--- a/index.html
+++ b/index.html
@@ -4,31 +4,75 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Flipper</title>
+    <!-- Bootstrap 5 CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Estilo personalizado -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Favicon -->
     <link
       rel="shortcut icon"
       href="https://cdn-icons-png.flaticon.com/512/2661/2661072.png"
       type="image/x-icon"
     />
   </head>
-  <body>
-    <main class="container">
-      <h1>Color Flipper</h1>
+  <body class="bg-light text-center">
+    <!-- Header + Navbar -->
+    <header>
+      <nav
+        class="navbar navbar-expand-lg navbar-light bg-white border-bottom shadow-sm"
+      >
+        <div class="container">
+          <a class="navbar-brand fw-bold" href="#">🎨 Color Flipper</a>
 
-      <div class="card">
-        <p class="description">
-          Clique no botão abaixo para mudar a cor de fundo.
-        </p>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="color-display">
-          <span class="label">Cor atual:</span>
-          <span class="span-color">#ffffff</span>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">Nomes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Hex</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+    </header>
 
-        <button id="btn">Mudar cor</button>
+    <!-- Conteúdo principal -->
+    <main
+      id="main-color"
+      class="container d-flex justify-content-center align-items-center"
+      style="height: 80vh"
+    >
+      <div class="card p-4 shadow-sm">
+        <h2 class="mb-3">
+          Background Color: <span class="span-color text-primary">#ffffff</span>
+        </h2>
+        <button id="btn" class="btn btn-dark">Mudar de cor</button>
       </div>
     </main>
 
+    <!-- Script JS -->
     <script src="js/app.js"></script>
+
+    <!-- Bootstrap JS (opcional para navbar responsiva) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
