--- a/hexa.html
+++ b/hexa.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Flipper</title>
+    <title>Color Flipper - HEX</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -68,13 +68,13 @@
     >
       <div class="card p-4 shadow-sm">
         <h2 class="mb-3">
-          Background Color: <span class="span-color text-primary">#ffffff</span>
+          HEX Color: <span class="span-color text-primary">#ffffff</span>
         </h2>
-        <button id="btn" class="btn btn-dark">Mudar de cor</button>
+        <button id="btn" class="btn btn-dark">Gerar HEX</button>
       </div>
     </main>
 
-    <script src="js/app.js"></script>
+    <script src="js/hexa.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
