--- a/hsl.html
+++ b/hsl.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Flipper</title>
+    <title>Color Flipper - HSL</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -68,13 +68,14 @@
     >
       <div class="card p-4 shadow-sm">
         <h2 class="mb-3">
-          Background Color: <span class="span-color text-primary">#ffffff</span>
+          HSL Color:
+          <span class="span-color text-primary">hsl(0, 0%, 100%)</span>
         </h2>
-        <button id="btn" class="btn btn-dark">Mudar de cor</button>
+        <button id="btn" class="btn btn-dark">Gerar HSL</button>
       </div>
     </main>
 
-    <script src="js/app.js"></script>
+    <script src="js/hsl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
