--- a/pro.html
+++ b/pro.html
@@ -3,23 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Flipper</title>
+    <title>Color Flipper PRO</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-
-    <link
-      rel="shortcut icon"
-      href="https://cdn-icons-png.flaticon.com/512/2661/2661072.png"
-      type="image/x-icon"
-    />
   </head>
 
   <body class="bg-light text-center">
     <header>
+      <!-- NAVBAR ATUALIZADA -->
       <nav
         class="navbar navbar-expand-lg navbar-light bg-white border-bottom shadow-sm"
       >
@@ -63,18 +58,35 @@
 
     <main
       id="main-color"
-      class="container d-flex justify-content-center align-items-center"
+      class="container d-flex flex-column justify-content-center align-items-center"
       style="height: 80vh"
     >
-      <div class="card p-4 shadow-sm">
-        <h2 class="mb-3">
-          Background Color: <span class="span-color text-primary">#ffffff</span>
-        </h2>
-        <button id="btn" class="btn btn-dark">Mudar de cor</button>
+      <div class="card-custom p-4 mb-4">
+        <h2 class="mb-3">Color Flipper PRO</h2>
+
+        <p class="mb-1">
+          <strong>HEX:</strong>
+          <span id="hex-value" class="text-primary">#ffffff</span>
+        </p>
+        <p class="mb-1">
+          <strong>RGB:</strong>
+          <span id="rgb-value" class="text-primary">rgb(255, 255, 255)</span>
+        </p>
+        <p class="mb-3">
+          <strong>HSL:</strong>
+          <span id="hsl-value" class="text-primary">hsl(0, 0%, 100%)</span>
+        </p>
+
+        <button id="btn" class="btn btn-dark btn-custom mb-2">Gerar Cor</button>
+        <button id="copy-btn" class="btn btn-secondary btn-custom">
+          Copiar HEX
+        </button>
       </div>
+
+      <div id="history" class="d-flex gap-2"></div>
     </main>
 
-    <script src="js/app.js"></script>
+    <script src="js/pro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
